Fix the double 60% on field list with links. Remove the vertical-align since it works opposite on urls

--- a/www/iphone/UiUIKit/stylesheets/iphone.css
+++ b/www/iphone/UiUIKit/stylesheets/iphone.css
@@ -748,19 +748,23 @@
 								padding: 0;
 								}
 							
+								ul.field li span {
+								    display: inline-block;
+								}
+
 								ul.field li a {
 									font-size: 13px;
 									/* line-height: 18px; */
 									overflow: visible;
 									white-space: normal;
 									display: inline-block;
-									width: 60%;
+									width: 100%;
 									padding: 0;
 									margin: 0 0 0 0;
-									vertical-align: top;
+									/*vertical-align: top;*/
 									}
 									
-								ul.field li big, ul.field li big a  {
+								ul.field li big {
 									font-size: 13px;
 									/* line-height: 18px; */
 									/* font-weight: bold; */
@@ -770,11 +774,6 @@
 									width: 60%;
 									}
 									
-									
-									
-									
-									
-																
 								ul.field li small {
 									font-size: 13px;
 									font-weight: bold
